# geant4-student-seminar

./: CMakeLists.txt  README.md  calibration.py  init_vis.mac  main.cc  start.mac  start_ch0.mac  start_ch1.mac
include/: CalorimeterSd.hh  DetectorConstruction.hh  GeometrySize.hh  Messenger.hh  PiDecayGenerator.hh  PrimaryGeneratorAction.hh  RunAction.hh  Settings.hh  TrackingSd.hh  TupleId.hh
src/: CalorimeterSd.cc  DetectorConstruction.cc  PiDecayGenerator.cc  PrimaryGeneratorAction.cc  RunAction.cc  TrackingSd.cc
